# tic-tac-toe-ai

./: index.html  main.py  pyproject.toml
.github/workflows/: deploy.yml
