[project]
name = "tic-tac-toe-ai"
version = "1.1.0"
description = "Tic Tac Toe with AI opponent (Easy/Normal/Hard), 2P mode, and score tracking."
requires-python = ">=3.10"
keywords = ["apps", "declarative", "game", "tic tac toe", "ai", "minimax"]
authors = [{ name = "enpit" }]
dependencies = ["flet"]

[dependency-groups]
dev = ["flet-cli", "flet-desktop", "flet-web"]
